# critic

./: AGENTS.md  Cargo.toml  README.md  flake.nix  justfile  release.toml
.github/workflows/: release.yaml
src/: config.rs  lib.rs  main.rs
src/app/: browser.rs  drafts.rs  editor.rs  events.rs  mod.rs  state.rs
src/app/state/: diff_tree.rs  search_input.rs  thread_nodes.rs  thread_search.rs  tree_filter.rs
src/domain/: mod.rs
src/fixtures/: mod.rs
src/github/: client.rs  comments.rs  diff.rs  errors.rs  mod.rs  pulls.rs
src/harness/: fixtures.rs  mod.rs
src/render/: markdown.rs  mod.rs  syntax.rs  thread.rs
src/search/: fuzzy.rs  mod.rs
src/ui/: hints.rs  mod.rs  theme.rs
src/ui/components/: footer.rs  header.rs  mod.rs  search_box.rs  shared.rs
src/ui/screens/: mod.rs  review.rs  review_diff.rs  search.rs
