[package]
name = "review-tui"
version = "0.1.0"
edition = "2024"

[features]
default = []
harness = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.58", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
fuzzy-matcher = "0.3"
octocrab = "0.49.5"
pulldown-cmark = "0.13"
ratatui = "0.30.0"
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
tree-sitter-highlight = "0.25"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
