[package]
name = "critic"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for reviewing GitHub pull requests and threads"
license = "MIT"
rust-version = "1.93.1"
authors = ["clabby"]
homepage = "https://github.com/clabby/critic"
repository = "https://github.com/clabby/critic"
keywords = ["GitHub", "review", "TUI"]
categories = ["git"]
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE.md",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.58", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dark-light = "2.0.0"
fuzzy-matcher = "0.3"
octocrab = "0.49.5"
pulldown-cmark = "0.13"
ratatui = "0.30.0"
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
tui-syntax-highlight = "0.2.0"
termbg = "0.6.2"
